--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sprint HTML5 Theme</title>
+
     <link rel="stylesheet" href="fontawesome-free-6.1.1-web/css/all.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,23 +67,25 @@
             </div>
         </div>
     </section>
+
     <section class="whychoose">
-        <div class="a">
-            <div>
 
-                <h2>WHY CHOOSE US?</h2>
-
-                <h3>OUR CAPABILITIES</h3>
-
-                <p>Then along come two they got nothin' but their jeans. Just two good ol' boys Never meanin' no harm beats all you've ever saw been</p>
-
-                <a href=""><i class="fa-solid fa-rocket"></i> UNIQUE</a>
-                <a href=""><i class="fa-solid fa-circle-dot"></i> ELEGANT</a>
-                <a href=""><i class="fa-solid fa-leaf"></i> CLEAN</a>
-                <a href=""><i class="fa-solid fa-pencil"></i> MINIMAL</a>
-            </div>
-        </div>
         <div class="anh">
+            <div class="a">
+                <div>
+
+                    <h2>WHY CHOOSE US?</h2>
+
+                    <h3>OUR CAPABILITIES</h3>
+
+                    <p>Then along come two they got nothin' but their jeans. Just two good ol' boys Never meanin' no harm beats all you've ever saw been</p>
+
+                    <a href=""><i class="fa-solid fa-rocket"></i> UNIQUE</a>
+                    <a href=""><i class="fa-solid fa-circle-dot"></i> ELEGANT</a>
+                    <a href=""><i class="fa-solid fa-leaf"></i> CLEAN</a>
+                    <a href=""><i class="fa-solid fa-pencil"></i> MINIMAL</a>
+                </div>
+            </div>
             <img src="https://premiumlayers.com/html/sprint/images/why-choose-img-1.jpg" alt="">
             <div class="b">
                 <p><i class="fa-solid fa-rocket"></i><br> The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the million aire and his wife didn't need no welfare states</p>
