--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <section class="mucluc">
+
         <img src="https://premiumlayers.com/html/sprint/images/logo.png" alt="">
+
         <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">PAGES</a></li>
@@ -25,22 +27,46 @@
             <li><a href="">BLOG</a></li>
             <li><a href="">CONTACT US</a></li>
         </ul>
+        <div class="topnav">
+            <div id="myLinks">
+                <a href="">HOME</a>
+                <a href="">PAGES</a>
+                <a href="">ABOUT US</a>
+                <a href="">SERVICES</a>
+                <a href="">PORTFOLIO</a>
+                <a href="">BLOG</a>
+                <a href="">CONTACT US</a>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
+        <script>
+            function myFunction() {
+                var x = document.getElementById("myLinks");
+                if (x.style.display === "block") {
+                    x.style.display = "none";
+                } else {
+                    x.style.display = "block";
+                }
+            }
+        </script>
     </section>
-    <section class="slide">
-        <div class="dd">
-            <p style="color: #FFFF;">DESIGN / DEVELOPMENT / BRANDING</p>
-            <h1 style="color: #FFFF;">SPRINT TRUE MINIMAL THEME</h1>
+    <section class="slide ">
+        <div class="dd ">
+            <p style="color: #FFFF; ">DESIGN / DEVELOPMENT / BRANDING</p>
+            <h1 style="color: #FFFF; ">SPRINT TRUE MINIMAL THEME</h1>
         </div>
 
     </section>
-    <section class="about">
-        <div class="p1">
+    <section class="about ">
+        <div class="p1 ">
             <h2>ABOUT OUR AGENCY</h2>
             <p>He's a demon on wheels. The mate was a mighty sailin' man the Skipper brave and sure. Five passengers set sail that day for a three hour tour a three hour tour the ship set ground on the shore of this uncharted</p>
         </div>
-        <div class="p2">
+        <div class="p2 ">
             <div>
-                <img src="https://premiumlayers.com/html/sprint/images/about-img-1.jpg" alt="">
+                <img src="https://premiumlayers.com/html/sprint/images/about-img-1.jpg " alt=" ">
 
                 <h3>WHO WE ARE</h3>
 
@@ -49,7 +75,7 @@
 
             </div>
             <div>
-                <img src="https://premiumlayers.com/html/sprint/images/about-img-2.jpg" alt="">
+                <img src="https://premiumlayers.com/html/sprint/images/about-img-2.jpg " alt=" ">
 
                 <h3>OUR MISSION</h3>
 
@@ -58,7 +84,7 @@
 
             </div>
             <div>
-                <img src="https://premiumlayers.com/html/sprint/images/about-img-3.jpg" alt="">
+                <img src="https://premiumlayers.com/html/sprint/images/about-img-3.jpg " alt=" ">
 
                 <h3>OUR VISION</h3>
 
@@ -68,10 +94,10 @@
         </div>
     </section>
 
-    <section class="whychoose">
+    <section class="whychoose ">
 
-        <div class="anh">
-            <div class="a">
+        <div class="anh ">
+            <div class="a ">
                 <div>
 
                     <h2>WHY CHOOSE US?</h2>
@@ -80,53 +106,53 @@
 
                     <p>Then along come two they got nothin' but their jeans. Just two good ol' boys Never meanin' no harm beats all you've ever saw been</p>
 
-                    <a href=""><i class="fa-solid fa-rocket"></i> UNIQUE</a>
-                    <a href=""><i class="fa-solid fa-circle-dot"></i> ELEGANT</a>
-                    <a href=""><i class="fa-solid fa-leaf"></i> CLEAN</a>
-                    <a href=""><i class="fa-solid fa-pencil"></i> MINIMAL</a>
+                    <a href=" "><i class="fa-solid fa-rocket "></i> UNIQUE</a>
+                    <a href=" "><i class="fa-solid fa-circle-dot "></i> ELEGANT</a>
+                    <a href=" "><i class="fa-solid fa-leaf "></i> CLEAN</a>
+                    <a href=" "><i class="fa-solid fa-pencil "></i> MINIMAL</a>
                 </div>
             </div>
-            <img src="https://premiumlayers.com/html/sprint/images/why-choose-img-1.jpg" alt="">
-            <div class="b">
-                <p><i class="fa-solid fa-rocket"></i><br> The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the million aire and his wife didn't need no welfare states</p>
+            <img src="https://premiumlayers.com/html/sprint/images/why-choose-img-1.jpg " alt=" ">
+            <div class="b ">
+                <p><i class="fa-solid fa-rocket "></i><br> The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the million aire and his wife didn't need no welfare states</p>
             </div>
         </div>
     </section>
-    <section class="contact">
-        <div class="c">
+    <section class="contact ">
+        <div class="c ">
             <h2>CONTACT US</h2>
             <p>He's a demon on wheels. The mate was a mighty sailin' man the Skipper brave and sure. Five passengers set sail that day for a three hour tour a three hour tour the ship set ground on the shore of this uncharted</p>
 
         </div>
-        <div class="d">
-            <div class="d1">
-                <input type="text" placeholder="*NAME" style="margin-right: 30px;">
-                <input type="email" name="" id="" placeholder="*EMAIL">
+        <div class="d ">
+            <div class="d1 ">
+                <input type="text " placeholder="*NAME " style="margin-right: 30px; ">
+                <input type="email " name=" " id=" " placeholder="*EMAIL ">
             </div>
-            <div class="d11">
-                <input type="text" placeholder="*PHONE" style="margin-right: 30px;">
-                <input type="text" placeholder="*SUBJECT">
+            <div class="d11 ">
+                <input type="text " placeholder="*PHONE " style="margin-right: 30px; ">
+                <input type="text " placeholder="*SUBJECT ">
             </div>
-            <div class="d2">
-                <input type="text" placeholder="*MESSAGE">
+            <div class="d2 ">
+                <input type="text " placeholder="*MESSAGE ">
 
             </div>
-            <div class="d3">
+            <div class="d3 ">
 
-                <button type="submit">SEND MESSAGE</button>
+                <button type="submit ">SEND MESSAGE</button>
 
             </div>
         </div>
     </section>
-    <section class="end">
-        <div class="end1">
+    <section class="end ">
+        <div class="end1 ">
             <p>09 DESIGN STREET, DOWNTOWN<br>VICTORIA, AUSTRALIA</p>
         </div>
-        <div class="end2">
-            <div class="icon">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-linkedin-in"></i> <br>
+        <div class="end2 ">
+            <div class="icon ">
+                <i class="fa-brands fa-facebook-f "></i>
+                <i class="fa-brands fa-twitter "></i>
+                <i class="fa-brands fa-linkedin-in "></i> <br>
             </div>
             <p>Copyright © 2015 - All Rights Reserved</p>
         </div>
