--- a/index.html
+++ b/index.html
@@ -27,30 +27,22 @@
             <li><a href="">BLOG</a></li>
             <li><a href="">CONTACT US</a></li>
         </ul>
-        <div class="topnav">
-            <div id="myLinks">
-                <a href="">HOME</a>
-                <a href="">PAGES</a>
-                <a href="">ABOUT US</a>
-                <a href="">SERVICES</a>
-                <a href="">PORTFOLIO</a>
-                <a href="">BLOG</a>
-                <a href="">CONTACT US</a>
+        <div id="menu2">
+            <div class="topnav">
+                <div id="myLinks">
+                    <a href="">HOME</a>
+                    <a href="">PAGES</a>
+                    <a href="">ABOUT US</a>
+                    <a href="">SERVICES</a>
+                    <a href="">PORTFOLIO</a>
+                    <a href="">BLOG</a>
+                    <a href="">CONTACT US</a>
+                </div>
             </div>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
         </div>
-        <script>
-            function myFunction() {
-                var x = document.getElementById("myLinks");
-                if (x.style.display === "block") {
-                    x.style.display = "none";
-                } else {
-                    x.style.display = "block";
-                }
-            }
-        </script>
     </section>
     <section class="slide ">
         <div class="dd ">
@@ -158,4 +150,16 @@
         </div>
 
     </section>
+
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 </body>
