--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                     <p>Then along come two they got nothin' but their jeans. Just two good ol' boys Never meanin' no harm beats all you've ever saw been</p>
 
-                    <a href=" "><i class="fa-solid fa-rocket "></i> UNIQUE</a>
+                    <a href=" " id="a1"><i class="fa-solid fa-rocket " ></i> UNIQUE</a>
                     <a href=" "><i class="fa-solid fa-circle-dot "></i> ELEGANT</a>
                     <a href=" "><i class="fa-solid fa-leaf "></i> CLEAN</a>
                     <a href=" "><i class="fa-solid fa-pencil "></i> MINIMAL</a>
@@ -118,11 +118,11 @@
         </div>
         <div class="d ">
             <div class="d1 ">
-                <input type="text " placeholder="*NAME " style="margin-right: 30px; ">
+                <input type="text " placeholder="*NAME ">
                 <input type="email " name=" " id=" " placeholder="*EMAIL ">
             </div>
             <div class="d11 ">
-                <input type="text " placeholder="*PHONE " style="margin-right: 30px; ">
+                <input type="text " placeholder="*PHONE ">
                 <input type="text " placeholder="*SUBJECT ">
             </div>
             <div class="d2 ">
@@ -131,7 +131,7 @@
             </div>
             <div class="d3 ">
 
-                <button type="submit ">SEND MESSAGE</button>
+                <button type="submit "><a href="">SEND MESSAGE</a></button>
 
             </div>
         </div>
