--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <h3>WHO WE ARE</h3>
 
-                <p>Can you tell me how to get how to get to SesaStreet.<br>Now the world don't move to the beat of just one um.<br> What might be right for you the.</p>
+                <p>Can you tell me how to get how to get to SesaStreet. Now the world don't move to the beat of just one um. What might be right for you the.</p>
 
 
             </div>
@@ -71,7 +71,7 @@
 
                 <h3>OUR MISSION</h3>
 
-                <p>Can you tell me how to get how to get to SesaStreet.<br>Now the world don't move to the beat of just one um.<br> What might be right for you the.</p>
+                <p>Can you tell me how to get how to get to SesaStreet. Now the world don't move to the beat of just one um. What might be right for you the.</p>
 
 
             </div>
@@ -80,7 +80,7 @@
 
                 <h3>OUR VISION</h3>
 
-                <p>Can you tell me how to get how to get to SesaStreet.<br>Now the world don't move to the beat of just one um.<br> What might be right for you the.</p>
+                <p>Can you tell me how to get how to get to SesaStreet. Now the world don't move to the beat of just one um. What might be right for you the.</p>
 
             </div>
         </div>
@@ -142,9 +142,9 @@
         </div>
         <div class="end2 ">
             <div class="icon ">
-                <i class="fa-brands fa-facebook-f "></i>
-                <i class="fa-brands fa-twitter "></i>
-                <i class="fa-brands fa-linkedin-in "></i> <br>
+                <a href="" id="fb"><i class="fa-brands fa-facebook-f "></i></a>
+                <a href="" id="tw"><i class="fa-brands fa-twitter "></i></a>
+                <a href="" id="in"><i class="fa-brands fa-linkedin-in "></i></a> <br>
             </div>
             <p>Copyright © 2015 - All Rights Reserved</p>
         </div>
