--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>He's a demon on wheels. The mate was a mighty sailin' man the Skipper brave and sure. Five passengers set sail that day for a three hour tour a three hour tour the ship set ground on the shore of this uncharted</p>
         </div>
         <div class="p2 ">
-            <div>
+            <div id="1">
                 <img src="https://premiumlayers.com/html/sprint/images/about-img-1.jpg " alt=" ">
 
                 <h3>WHO WE ARE</h3>
@@ -66,7 +66,7 @@
 
 
             </div>
-            <div>
+            <div id="2">
                 <img src="https://premiumlayers.com/html/sprint/images/about-img-2.jpg " alt=" ">
 
                 <h3>OUR MISSION</h3>
@@ -75,7 +75,7 @@
 
 
             </div>
-            <div>
+            <div id="3">
                 <img src="https://premiumlayers.com/html/sprint/images/about-img-3.jpg " alt=" ">
 
                 <h3>OUR VISION</h3>
